kube/e-mall-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: e-mall-db
  name: e-mall-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: e-mall-db
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: e-mall-db
    spec:
      containers:
        - image: e-mall-db
          name: e-mall-db
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
