kube/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
  namespace: emall
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: eureka-server
    spec:
      containers:
        - image: eureka-server-image
          name: eureka-server
          imagePullPolicy: Never
          ports:
            - containerPort: 8761
              protocol: TCP
      restartPolicy: Always
