kube/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: emall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: password
            - name: MONGO_INITDB_ROOT_USERNAME
              value: mongo
          image: mongo:latest
          name: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              protocol: TCP
      restartPolicy: Always
