kube/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: order-service
  name: order-service
  namespace: emall
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: order-service
    spec:
      containers:
        - image: order-service-image
          name: order-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
              protocol: TCP
      restartPolicy: Always
