kube/client-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: client-service
  name: client-service
  namespace: emall
spec:
  ports:
    - name: "client"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: client-service
