kube/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kafka
  name: kafka
  namespace: emall
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
    - name: "29092"
      port: 29092
      targetPort: 29092
  selector:
    io.kompose.service: kafka
